Implement Test Status Classification (Passed/Failed) (Closes #9)